src/objects/Dettaglio_Transazione__c.object
<CustomObject>
    <fields>
        <fullName>Chiave_Riga_Transazione__c</fullName>
        <externalId>true</externalId>
        <label>Chiave Riga Transazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Transazione__c</fullName>
        <label>Data Transazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Importo_Prodotto__c</fullName>
        <label>Importo Prodotto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_Riduzione__c</fullName>
        <label>Importo Riduzione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prodotto_EAN__c</fullName>
        <label>Prodotto EAN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prodotto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Dettaglio Transazioni</relationshipLabel>
        <relationshipName>Dettaglio_Transazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantita_Prodotto__c</fullName>
        <label>Quantita Prodotto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transazione_Offline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transazione Offline</label>
        <referenceTo>Transazione__c</referenceTo>
        <relationshipLabel>Dettaglio Transazioni</relationshipLabel>
        <relationshipName>Dettaglio_Transazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dettaglio Transazione</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dettaglio Transazione  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dettaglio Transazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>